services/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: monitoring
  namespace: monitoring
spec: {}
status: {}
